# procivis-one-core

./: .gitlab-ci.yml  Cargo.toml  deny.toml
apps/core-server/: Cargo.toml
apps/core-server/src/: extractor.rs  router.rs
config/: config-local.yml  config-procivis-base.yml  config-procivis-server-demo.yml  config-procivis-server-dev.yml  config-procivis-server-test.yml  config-procivis-server-trial.yml  config-procivis-server.yml
docker/: Dockerfile  Dockerfile.fidentity  dev.yml
lib/dcql/: Cargo.toml
lib/dcql/src/: lib.rs
lib/migration/src/: lib.rs  m20260219_051400_remove_lvvc.rs  m20260316_120000_rename_status_to_state.rs  m20260330_094048_add_identifier_trust_info.rs  m20260331_132248_certificate_roles.rs  m20260410_120000_history_metadata_to_text.rs  m20260410_130000_add_metadata_blob_to_history.rs  m20260410_133852_openid_metadata_cache_types.rs  m20260413_125543_delete_cert_metadata.rs
lib/migration/tests/: schema_tests.rs
lib/one-core/: Cargo.toml
lib/one-core/src/: lib.rs
lib/one-crypto/src/: lib.rs
lib/shared-types/src/: credential_format.rs  did_value.rs  identifier_trust_information_id.rs  lib.rs
lib/sql-data-provider/: Cargo.toml
lib/standardized-types/: Cargo.toml
lib/standardized-types/src/: lib.rs  x509.rs
lib/standardized-types/src/etsi_119_602/: mod.rs
lib/standardized-types/src/etsi_119_602/json/: mod.rs  test.rs
lib/standardized-types/src/etsi_119_602/xml/: mapper.rs  mod.rs  serde_wrappers.rs  test.rs
lib/standardized-types/src/xades/: mod.rs  qualifying_properties.rs  serde_bridge.rs  xmldsig.rs
(+397 files in other folders)
